--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start -p ${PORT:-3000}",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
